--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,84 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ShopEase - Online Shopping</title>
+  <link rel="stylesheet" href="Style.css">
+</head>
+<body>
 
+  <!-- Navbar -->
+  <nav>
+    <div class="logo">ShopEase</div>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Categories</a></li>
+      <li><a href="#">Deals</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><a href="#" class="btn-nav">Login</a></li>
+    </ul>
+  </nav>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Shop the Latest Trends</h1>
+      <p>Discover exclusive deals on fashion, gadgets, and more. Everything you need, in one place.</p>
+      <a href="#" class="btn">Start Shopping</a>
+    </div>
+  </section>
+
+  <!-- Categories Section -->
+  <section class="categories">
+    <h2>Shop by Category</h2>
+    <div class="grid">
+      <div class="card">
+        <img src="https://source.unsplash.com/400x300/?fashion" alt="Fashion">
+        <h3>Fashion</h3>
+      </div>
+      <div class="card">
+        <img src="https://source.unsplash.com/400x300/?electronics" alt="Electronics">
+        <h3>Electronics</h3>
+      </div>
+      <div class="card">
+        <img src="https://source.unsplash.com/400x300/?home" alt="Home">
+        <h3>Home & Living</h3>
+      </div>
+      <div class="card">
+        <img src="https://source.unsplash.com/400x300/?beauty" alt="Beauty">
+        <h3>Beauty</h3>
+      </div>
+      <div class="card">
+        <img src="https://source.unsplash.com/400x300/?sports" alt="Sports">
+        <h3>Sports</h3>
+      </div>
+    </div>
+  </section>
+
+  <!-- Deals Section -->
+  <section class="deals">
+    <h2>Hot Deals</h2>
+    <div class="grid">
+      <div class="deal-card">
+        <img src="https://source.unsplash.com/400x300/?shoes" alt="Shoes">
+        <h3>50% Off Shoes</h3>
+        <p>Grab stylish footwear at half the price.</p>
+        <a href="#" class="btn">Shop Now</a>
+      </div>
+      <div class="deal-card">
+        <img src="https://source.unsplash.com/400x300/?laptop" alt="Laptop">
+        <h3>Electronics Sale</h3>
+        <p>Up to 40% off on laptops & gadgets.</p>
+        <a href="#" class="btn">Shop Now</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 ShopEase. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
